fix: image size on small viewport

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -128,6 +128,6 @@
     }
 
     .App main #projects .project img {
-        width: 100%;
+        max-width: 100%;
     }
 }
